--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # GitHub Pages 도메인 설정
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://jhva.github.io/sample-release/" # GitHub Pages 도메인 설정
 twitter_username: jekyllrb
 github_username: jekyll
 remote_theme: chesterhow/tale
